# i18n_keyval

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  linux.yml  macos.yml  windows.yml
scripts/: format.sh
src/: main.cpp
src/i18n/: i18n.cpp  i18n.hpp  registry.cpp  registry.hpp  split_iterator.hpp  translator.hpp  utils.cpp  utils.hpp
src/i18n/core/: api.cpp  api.hpp  common.cpp  registry.cpp  registry.hpp  translator.hpp
src/i18n/translators/: basic.hpp  nlohmann_json.hpp  pugixml.hpp  rapidjson.hpp  sol2.hpp  tinyxml2.hpp
src/i18n/util/: extension.hpp  file.cpp  split_iterator.hpp
src/i18n_keyval/: i18n.hpp
src/i18n_keyval/core/: api.cpp  api.hpp  common.cpp  common.hpp  registry.cpp  registry.hpp
src/i18n_keyval/translators/: basic.hpp  nlohmann_json.hpp  pugixml.hpp  rapidjson.hpp  sol2.hpp  tinyxml2.hpp
src/i18n_keyval/util/: file.cpp  file.hpp  split_iterator.hpp
src/translators/: basic.hpp  nlohmann_json.hpp
test/: CMakeLists.txt  i18n.cpp  registry.cpp  split_iterator.cpp  utils.cpp
test/core/: api.cpp  registry.cpp
test/data/translations/en/: translation.json  translation.lua  translation.xml
test/data/translations/es/: translation.json  translation.lua  translation.xml
test/translators/: basic.cpp  nlohmann_json.cpp  pugixml.cpp  rapidjson.cpp  sol2.cpp  tinyxml2.cpp
test/util/: file.cpp  split_iterator.cpp
